--- a/index.html
+++ b/index.html
@@ -1,195 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Muvvy — платформа общения</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: "Segoe UI", sans-serif;
-    }
-
-    body {
-      background: linear-gradient(135deg, #1c1c1e, #2b2b2b);
-      color: #fff;
-      line-height: 1.6;
-      padding: 0;
-    }
-
-    header {
-      padding: 60px 20px 30px;
-      text-align: center;
-    }
-
-    header h1 {
-      font-size: 3em;
-      color: #8A9A5B;
-      margin-bottom: 10px;
-    }
-
-    header p {
-      color: #ccc;
-      font-size: 1.2em;
-      max-width: 600px;
-      margin: 0 auto;
-    }
-
-    .buttons {
-      margin: 30px 0;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      flex-wrap: wrap;
-    }
-
-    button {
-      background-color: #8A9A5B;
-      border: none;
-      padding: 12px 24px;
-      border-radius: 8px;
-      color: #fff;
-      font-size: 1em;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    button:hover {
-      background-color: #768748;
-    }
-
-    section {
-      padding: 50px 20px;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-
-    .block {
-      background-color: #2a2a2a;
-      border-radius: 12px;
-      padding: 30px;
-      margin-bottom: 30px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
-    }
-
-    .block h2 {
-      color: #8A9A5B;
-      margin-bottom: 10px;
-    }
-
-    .block p {
-      color: #ddd;
-    }
-
-    footer {
-      text-align: center;
-      padding: 30px 20px;
-      color: #888;
-      font-size: 0.9em;
-    }
-
-    /* Модальное окно */
-    .modal {
-      display: none;
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.6);
-      justify-content: center;
-      align-items: center;
-      z-index: 999;
-    }
-
-    .modal-content {
-      background: #2a2a2a;
-      padding: 30px;
-      border-radius: 12px;
-      color: #fff;
-      text-align: center;
-      width: 300px;
-    }
-
-    .modal-content h2 {
-      margin-bottom: 10px;
-    }
-
-    .close-btn {
-      margin-top: 20px;
-      background: #444;
-    }
-
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 2.2em;
-      }
-
-      .block {
-        padding: 20px;
-      }
-
-      button {
-        width: 100%;
-      }
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Muvvy</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
-  <header>
-    <h1>Muvvy</h1>
-    <p>Твоя гибридная коммуникационная платформа — чат, сообщества и свобода общения в одном месте.</p>
-
+  <div class="container">
+    <h1>Добро пожаловать в Muvvy</h1>
     <div class="buttons">
-      <button onclick="openModal()">Регистрация</button>
-      <button onclick="openModal()">Вход</button>
-    </div>
-  </header>
-
-  <section>
-    <div class="block">
-      <h2>🔗 Всё под контролем</h2>
-      <p>Создавай комнаты, обсуждения и делись контентом. Твоя платформа — твои правила.</p>
-    </div>
-
-    <div class="block">
-      <h2>💡 Умный дизайн</h2>
-      <p>Никаких отвлекающих элементов. Только удобный интерфейс и интуитивная навигация. Всё легко, даже для новичков.</p>
-    </div>
-
-    <div class="block">
-      <h2>📱 Доступно везде</h2>
-      <p>Работает на телефоне, планшете, ноутбуке и в браузере. Muvvy адаптируется под твоё устройство.</p>
-    </div>
-
-    <div class="block">
-      <h2>🛡️ Безопасность и приватность</h2>
-      <p>Серверы на территории РФ. Данные под защитой, никакой лишней информации не собирается.</p>
-    </div>
-  </section>
-
-  <footer>
-    © 2025 Muvvy — сделано с вниманием к деталям.
-  </footer>
-
-  <!-- Модальное окно -->
-  <div class="modal" id="modal">
-    <div class="modal-content">
-      <h2>Скоро</h2>
-      <p>Эта функция появится в следующей версии. Следите за новостями!</p>
-      <button class="close-btn" onclick="closeModal()">Закрыть</button>
+      <a href="login/index.html" class="btn">Вход</a>
+      <a href="register/index.html" class="btn">Регистрация</a>
     </div>
   </div>
-
-  <script>
-    function openModal() {
-      document.getElementById("modal").style.display = "flex";
-    }
-
-    function closeModal() {
-      document.getElementById("modal").style.display = "none";
-    }
-  </script>
-
 </body>
 </html>
