--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -10,8 +11,8 @@
   <div class="container">
     <h1>Добро пожаловать в Muvvy</h1>
     <div class="buttons">
-      <a href="login/index.html" class="btn">Вход</a>
       <a href="register/index.html" class="btn">Регистрация</a>
+      <a href="login/index.html" class="btn">Вход</a>
     </div>
   </div>
 </body>
