--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Muvvy</title>
-  <link rel="stylesheet" href="styles.css" />
+  <title>Muvvy — Добро пожаловать</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
-    <h1>Добро пожаловать в Muvvy</h1>
-    <div class="buttons">
-      <a href="register/index.html" class="btn">Регистрация</a>
-      <a href="login/index.html" class="btn">Вход</a>
+  <div class="main-container">
+    <div class="welcome-card">
+      
+      <div class="logo-container">
+        <img src="logo.jpg" alt="Muvvy Logo" class="logo-img" />
+      </div>
+
+      <h1>Добро пожаловать в Muvvy</h1>
+      <p>Твоя новая платформа для общения и идей.</p>
+
+      <div class="button-container">
+        <a href="register/" class="button button-register">Регистрация</a>
+        <a href="login/" class="button button-login">Вход</a>
+      </div>
+
     </div>
   </div>
 </body>
