--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="welcome-card">
       
       <div class="logo-container">
-        <img src="logo.jpg" alt="Muvvy Logo" class="logo-img" />
+        <img src="logo.png" alt="Muvvy Logo" class="logo-img" />
       </div>
 
       <h1>Добро пожаловать в Muvvy</h1>
