--- a/gpt_ai/index.html
+++ b/gpt_ai/index.html
@@ -51,7 +51,7 @@
 
     try {
       // ЗАМЕНИ URL на адрес своего backend-API!
-      const response = await fetch('https://your-backend-domain.com/api/ai', {
+      const response = await fetch('https://gpt-tg-2mop.onrender.com/api/ai', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ message: text })
