--- a/gpt_ai/index.html
+++ b/gpt_ai/index.html
@@ -1,74 +1,43 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ИИ Web App для Telegram</title>
-  <style>
-    body { font-family: Arial, sans-serif; padding: 10px; background: #f8f8f8; }
-    #chat { height: 350px; border: 1px solid #ccc; padding: 10px; overflow-y: auto; background: #fff; }
-    .msg { margin: 5px 0; }
-    .user { color: #1976d2; }
-    .bot { color: #388e3c; }
-    #inputArea { margin-top: 10px; }
-    button { background: #1976d2; color: #fff; border: none; padding: 6px 18px; border-radius: 4px; cursor: pointer; }
-    button:disabled { opacity: 0.6; }
-    input { padding: 6px; width: 70%; }
-  </style>
+    <meta charset="utf-8">
+    <title>GPT-4 Telegram WebApp</title>
 </head>
 <body>
+    <h2>GPT-4 Chat для Telegram WebApp</h2>
+    <input type="text" id="msg" placeholder="Введите сообщение">
+    <button id="sendBtn">Отправить</button>
+    <div id="chat"></div>
 
-<h2>ИИ Telegram Web App</h2>
-<div id="chat"></div>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script>
+    // Проверка и получение chat_id из Telegram WebApp
+    let tg = window.Telegram.WebApp;
+    let chat_id = tg.initDataUnsafe && tg.initDataUnsafe.user && tg.initDataUnsafe.user.id ? tg.initDataUnsafe.user.id : null;
 
-<div id="inputArea">
-  <input type="text" id="input" placeholder="Напиши сообщение..." autocomplete="off" />
-  <button id="sendBtn">Отправить</button>
-</div>
+    document.getElementById('sendBtn').onclick = function() {
+        let msg = document.getElementById('msg').value;
+        if (!msg) return alert('Введите сообщение!');
+        if (!chat_id) return alert('chat_id не определён (запустите через Telegram WebApp)');
 
-<script src="https://telegram.org/js/telegram-web-app.js"></script>
-<script>
-  const chat = document.getElementById('chat');
-  const input = document.getElementById('input');
-  const sendBtn = document.getElementById('sendBtn');
-
-  Telegram.WebApp.ready();
-
-  function addMessage(text, sender) {
-    const div = document.createElement('div');
-    div.className = 'msg ' + sender;
-    div.textContent = text;
-    chat.appendChild(div);
-    chat.scrollTop = chat.scrollHeight;
-  }
-
-  async function sendMessage() {
-    const text = input.value.trim();
-    if (!text) return;
-    addMessage("Ты: " + text, "user");
-    input.value = '';
-    sendBtn.disabled = true;
-
-    try {
-      // ЗАМЕНИ URL на адрес своего backend-API!
-      const response = await fetch('https://gpt-tg-2mop.onrender.com/api/ai', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ message: text })
-      });
-      const data = await response.json();
-      addMessage("Бот: " + data.answer, "bot");
-    } catch (err) {
-      addMessage("Ошибка при получении ответа от ИИ.", "bot");
-    }
-    sendBtn.disabled = false;
-  }
-
-  sendBtn.addEventListener('click', sendMessage);
-  input.addEventListener('keypress', e => {
-    if (e.key === 'Enter') sendMessage();
-  });
-</script>
-
+        fetch('https://gpt-tg-2mop.onrender.com/api/ai', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({
+                chat_id: chat_id,
+                message: msg
+            })
+        })
+        .then(res => res.json())
+        .then(data => {
+            document.getElementById('chat').innerHTML += `<b>Вы:</b> ${msg}<br><b>Бот:</b> ${data.response}<br><br>`;
+            document.getElementById('msg').value = '';
+        })
+        .catch(err => {
+            alert('Ошибка: ' + err);
+        });
+    };
+    </script>
 </body>
 </html>
