--- a/gpt_ai/index.html
+++ b/gpt_ai/index.html
@@ -1,43 +1,254 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-    <meta charset="utf-8">
-    <title>GPT-4 Telegram WebApp</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>GPT Web App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@600&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+        :root {
+            --bg-color: #1b1b1b;
+            --accent-color: #8A9A5B;
+            --accent-hover-color: #9EB46E;
+            --text-primary-color: #FFFFFF;
+            --text-secondary-color: #CCCCCC;
+            --border-color: #2a2a2a;
+            --card-bg-color: #2f2f2f;
+            --font-heading: 'Poppins', sans-serif;
+            --font-body: 'Inter', sans-serif;
+        }
+        body {
+            background-color: var(--bg-color);
+            color: var(--text-primary-color);
+            font-family: var(--font-body);
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .container {
+            width: 100%;
+            height: 100%;
+            max-width: 800px;
+            display: flex;
+            flex-direction: column;
+            background-color: var(--bg-color);
+        }
+        .top-bar {
+            padding: 1rem 1.5rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-shrink: 0;
+            border-bottom: 1px solid var(--border-color);
+        }
+        h1 {
+            font-family: var(--font-heading);
+            font-size: 1.5rem;
+            margin: 0;
+        }
+        button#clear-history {
+            background: var(--accent-color);
+            border: none;
+            border-radius: 1rem;
+            color: white;
+            padding: 0.5rem 1rem;
+            font-family: var(--font-heading);
+            font-weight: 600;
+            cursor: pointer;
+            transition: background-color 0.2s ease-in-out;
+        }
+        button#clear-history:hover {
+            background: var(--accent-hover-color);
+        }
+        #chat-box {
+            flex-grow: 1;
+            padding: 1.5rem;
+            overflow-y: auto;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+        }
+        #chat-box::-webkit-scrollbar {
+            width: 8px;
+        }
+        #chat-box::-webkit-scrollbar-track {
+            background: var(--bg-color);
+        }
+        #chat-box::-webkit-scrollbar-thumb {
+            background-color: var(--border-color);
+            border-radius: 10px;
+            border: 2px solid var(--bg-color);
+        }
+        .message-card {
+            padding: 0.75rem 1.25rem;
+            border-radius: 1rem;
+            max-width: 75%;
+            line-height: 1.5;
+            word-wrap: break-word;
+        }
+        .message-card.received {
+            background-color: var(--card-bg-color);
+            align-self: flex-start;
+            border-bottom-left-radius: 0.25rem;
+        }
+        .message-card.sent {
+            background-color: var(--accent-color);
+            color: var(--text-primary-color);
+            align-self: flex-end;
+            border-bottom-right-radius: 0.25rem;
+        }
+        .message-card strong {
+            font-family: var(--font-heading);
+            font-weight: 600;
+            display: block;
+            margin-bottom: 0.25rem;
+            opacity: 0.8;
+        }
+        #input-form {
+            display: flex;
+            align-items: center;
+            padding: 0.75rem;
+            margin: 1rem;
+            background-color: var(--card-bg-color);
+            border-radius: 1.5rem;
+            gap: 0.5rem;
+        }
+        #user-input {
+            flex-grow: 1;
+            background: transparent;
+            border: none;
+            padding: 0.5rem;
+            color: var(--text-primary-color);
+            font-size: 1rem;
+        }
+        #user-input:focus {
+            outline: none;
+        }
+        #user-input::placeholder {
+            color: var(--text-secondary-color);
+            opacity: 0.6;
+        }
+        #send-btn {
+            background: var(--accent-color);
+            border: none;
+            border-radius: 50%;
+            width: 44px;
+            height: 44px;
+            color: white;
+            cursor: pointer;
+            transition: all 0.2s ease-in-out;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-shrink: 0;
+        }
+        #send-btn:hover {
+            background: var(--accent-hover-color);
+            transform: scale(1.05);
+        }
+    </style>
 </head>
 <body>
-    <h2>GPT-4 Chat для Telegram WebApp</h2>
-    <input type="text" id="msg" placeholder="Введите сообщение">
-    <button id="sendBtn">Отправить</button>
-    <div id="chat"></div>
+    <div class="container">
+        <div class="top-bar">
+            <h1>Z AI</h1>
+            <button id="clear-history" title="Очистить историю">Очистить историю</button>
+        </div>
 
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+        <div id="chat-box"></div>
+
+        <form id="input-form" action="javascript:void(0);">
+            <input type="text" id="user-input" placeholder="Введите сообщение..." autocomplete="off" />
+            <button id="send-btn" type="submit" title="Отправить">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" 
+                     viewBox="0 0 24 24" fill="none" stroke="currentColor" 
+                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <line x1="22" y1="2" x2="11" y2="13"></line>
+                    <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+                </svg>
+            </button>
+        </form>
+    </div>
+
     <script>
-    // Проверка и получение chat_id из Telegram WebApp
-    let tg = window.Telegram.WebApp;
-    let chat_id = tg.initDataUnsafe && tg.initDataUnsafe.user && tg.initDataUnsafe.user.id ? tg.initDataUnsafe.user.id : null;
+        const chatBox = document.getElementById("chat-box");
+        const userInput = document.getElementById("user-input");
+        const sendBtn = document.getElementById("send-btn");
+        const clearBtn = document.getElementById("clear-history");
 
-    document.getElementById('sendBtn').onclick = function() {
-        let msg = document.getElementById('msg').value;
-        if (!msg) return alert('Введите сообщение!');
-        if (!chat_id) return alert('chat_id не определён (запустите через Telegram WebApp)');
+        function addMessage(sender, text, type) {
+            const card = document.createElement("div");
+            card.className = `message-card ${type}`;
+            card.innerHTML = `<strong>${sender}</strong>${text}`;
+            chatBox.appendChild(card);
+            chatBox.scrollTop = chatBox.scrollHeight;
+        }
 
-        fetch('https://gpt-tg-2mop.onrender.com/api/ai', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({
-                chat_id: chat_id,
-                message: msg
-            })
-        })
-        .then(res => res.json())
-        .then(data => {
-            document.getElementById('chat').innerHTML += `<b>Вы:</b> ${msg}<br><b>Бот:</b> ${data.response}<br><br>`;
-            document.getElementById('msg').value = '';
-        })
-        .catch(err => {
-            alert('Ошибка: ' + err);
+        async function sendMessage(message) {
+            addMessage("Вы", message, "sent");
+            userInput.value = "";
+            userInput.disabled = true;
+            sendBtn.disabled = true;
+
+            try {
+                const response = await fetch("/api/ai", {
+                    method: "POST",
+                    headers: {"Content-Type": "application/json"},
+                    body: JSON.stringify({message})
+                });
+
+                if (!response.ok) {
+                    throw new Error(`HTTP error: ${response.status}`);
+                }
+
+                const data = await response.json();
+                if (data.response) {
+                    addMessage("GPT", data.response, "received");
+                } else {
+                    addMessage("Система", "Пустой ответ от сервера.", "received");
+                }
+            } catch (error) {
+                console.error("Ошибка запроса:", error);
+                addMessage("Система", "Ошибка соединения с сервером.", "received");
+            } finally {
+                userInput.disabled = false;
+                sendBtn.disabled = false;
+                userInput.focus();
+            }
+        }
+
+        document.getElementById("input-form").addEventListener("submit", () => {
+            const message = userInput.value.trim();
+            if (message) {
+                sendMessage(message);
+            }
         });
-    };
+
+        clearBtn.addEventListener("click", async () => {
+            if (!confirm("Вы уверены, что хотите очистить историю?")) return;
+
+            try {
+                const response = await fetch("/api/clear_history", {
+                    method: "POST",
+                    headers: {"Content-Type": "application/json"},
+                    body: JSON.stringify({})
+                });
+                if (!response.ok) {
+                    throw new Error(`HTTP error: ${response.status}`);
+                }
+                chatBox.innerHTML = "";
+            } catch (error) {
+                console.error("Ошибка очистки истории:", error);
+                alert("Не удалось очистить историю.");
+            }
+        });
     </script>
 </body>
 </html>
