--- a/gpt_ai/index.html
+++ b/gpt_ai/index.html
@@ -74,6 +74,231 @@
             display: flex;
             flex-direction: column;
             gap: 1rem;
+            margin-bottom: 80px; /* Отступ снизу под фиксированную форму */
+        }
+        #chat-box::-webkit-scrollbar {
+            width: 8px;
+        }
+        #chat-box::-webkit-scrollbar-track {
+            background: var(--bg-color);
+        }
+        #chat-box::-webkit-scrollbar-thumb {
+            background-color: var(--border-color);
+            border-radius: 10px;
+            border: 2px solid var(--bg-color);
+        }
+        .message-card {
+            padding: 0.75rem 1.25rem;
+            border-radius: 1rem;
+            max-width: 75%;
+            line-height: 1.5;
+            word-wrap: break-word;
+        }
+        .message-card.received {
+            background-color: var(--card-bg-color);
+            align-self: flex-start;
+            border-bottom-left-radius: 0.25rem;
+        }
+        .message-card.sent {
+            background-color: var(--accent-color);
+            color: var(--text-primary-color);
+            align-self: flex-end;
+            border-bottom-right-radius: 0.25rem;
+        }
+        .message-card strong {
+            font-family: var(--font-heading);
+            font-weight: 600;
+            display: block;
+            margin-bottom: 0.25rem;
+            opacity: 0.8;
+        }
+        #input-form {
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 100%;
+            max-width: 800px;
+            display: flex;
+            align-items: center;
+            padding: 0.75rem 1rem;
+            background-color: var(--card-bg-color);
+            border-radius: 1.5rem;
+            gap: 0.5rem;
+            box-sizing: border-box;
+            z-index: 1000;
+        }
+        #user-input {
+            flex-grow: 1;
+            background: transparent;
+            border: none;
+            padding: 0.5rem;
+            color: var(--text-primary-color);
+            font-size: 1rem;
+        }
+        #user-input:focus {
+            outline: none;
+        }
+        #user-input::placeholder {
+            color: var(--text-secondary-color);
+            opacity: 0.6;
+        }
+        #send-btn {
+            background: var(--accent-color);
+            border: none;
+            border-radius: 50%;
+            width: 44px;
+            height: 44px;
+            color: white;
+            cursor: pointer;
+            transition: all 0.2s ease-in-out;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-shrink: 0;
+        }
+        #send-btn:hover {
+            background: var(--accent-hover-color);
+            transform: scale(1.05);
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="top-bar">
+            <h1>GPT Чат</h1>
+            <button id="clear-history" title="Очистить историю">Очистить историю</button>
+        </div>
+
+        <div id="chat-box"></div>
+
+        <form id="input-form" action="javascript:void(0);">
+            <input type="text" id="user-input" placeholder="Введите сообщение..." autocomplete="off" />
+            <button id="send-btn" type="submit" title="Отправить">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" 
+                     viewBox="0 0 24 24" fill="none" stroke="currentColor" 
+                     stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <line x1="22" y1="2" x2="11" y2="13"></line>
+                    <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+                </svg>
+            </button>
+        </form>
+    </div>
+
+    <script>
+        const chatBox = document.getElementById("chat-box");
+        const userInput = document.getElementById("user-input");
+        const sendBtn = document.getElementById("send-btn");
+        const clearBtn = document.getElementById("clear-history");
+
+        function addMessage(sender, text, type) {
+            const card = document.createElement("div");
+            card.className = `message-card ${type}`;
+            card.innerHTML = `<strong>${sender}</strong>${text}`;
+            chatBox.appendChild(card);
+            chatBox.scrollTop = chatBox.scrollHeight;
+        }
+
+        async function sendMessage(message) {
+            addMessage("Вы", message, "sent");
+            userInput.value = "";
+            userInput.disabled = true;
+            sendBtn.disabled = true;
+
+            try {
+                const response = await fetch("/api/ai", {
+                    method: "POST",
+                    headers: {"Content-Type": "application/json"},
+                    body: JSON.stringify({message})
+                });
+
+                if (!response.ok) {
+                    throw new Error(`HTTP error: ${response.status}`);
+                }
+
+                const data = await response.json();
+                if (data.response) {
+                    addMessage("GPT", data.response, "received");
+                } else {
+                    addMessage("Система", "Пустой ответ от сервера.", "received");
+                }
+            } catch (error) {
+                console.error("Ошибка запроса:", error);
+                addMessage("Система", "Ошибка соединения с сервером.", "received");
+            } finally {
+                userInput.disabled = false;
+                sendBtn.disabled = false;
+                userInput.focus();
+            }
+        }
+
+        document.getElementById("input-form").addEventListener("submit", () => {
+            const message = userInput.value.trim();
+            if (message) {
+                sendMessage(message);
+            }
+        });
+
+        clearBtn.addEventListener("click", async () => {
+            if (!confirm("Вы уверены, что хотите очистить историю?")) return;
+
+            try {
+                const response = await fetch("/api/clear_history", {
+                    method: "POST",
+                    headers: {"Content-Type": "application/json"},
+                    body: JSON.stringify({})
+                });
+                if (!response.ok) {
+                    throw new Error(`HTTP error: ${response.status}`);
+                }
+                chatBox.innerHTML = "";
+            } catch (error) {
+                console.error("Ошибка очистки истории:", error);
+                alert("Не удалось очистить историю.");
+            }
+        });
+    </script>
+</body>
+</html>            height: 100%;
+            max-width: 800px;
+            display: flex;
+            flex-direction: column;
+            background-color: var(--bg-color);
+        }
+        .top-bar {
+            padding: 1rem 1.5rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-shrink: 0;
+            border-bottom: 1px solid var(--border-color);
+        }
+        h1 {
+            font-family: var(--font-heading);
+            font-size: 1.5rem;
+            margin: 0;
+        }
+        button#clear-history {
+            background: var(--accent-color);
+            border: none;
+            border-radius: 1rem;
+            color: white;
+            padding: 0.5rem 1rem;
+            font-family: var(--font-heading);
+            font-weight: 600;
+            cursor: pointer;
+            transition: background-color 0.2s ease-in-out;
+        }
+        button#clear-history:hover {
+            background: var(--accent-hover-color);
+        }
+        #chat-box {
+            flex-grow: 1;
+            padding: 1.5rem;
+            overflow-y: auto;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
         }
         #chat-box::-webkit-scrollbar {
             width: 8px;
