--- a/planshet/index.html
+++ b/planshet/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#000000" />
   <link rel="manifest" href="manifest.json" />
-  <title>PhotoClock</title>
+  <title>Launcher</title>
   <style>
     html, body {
       margin: 0; padding: 0;
@@ -98,7 +98,7 @@
     const col2 = document.getElementById("col2");
     const addPhotosBtn = document.getElementById("addPhotos");
 
-    let photos = JSON.parse(localStorage.getItem("photos") || "[]");
+    let photos = [];
     let current = 0;
 
     function updateClock() {
@@ -170,15 +170,11 @@
       input.onchange = () => {
         const files = Array.from(input.files);
         photos = files.map(f => URL.createObjectURL(f));
-        localStorage.setItem("photos", JSON.stringify(photos));
         updateSlideshow();
       };
       input.click();
     };
-
-    if (photos.length) updateSlideshow();
-
-    // ✅ Регистрация service worker
+    
     if ("serviceWorker" in navigator) {
       navigator.serviceWorker.register("service-worker.js");
     }
